--- a/styles/style1.css
+++ b/styles/style1.css
@@ -29,9 +29,9 @@ body
 	position: absolute;
 	height: 50px;
 	width: 129px;
-	background: -webkit-linear-gradient(rgb(153, 15, 200), blue);
-	background: -o-linear-gradient(rgb(153, 15, 200), blue);
-	background: -moz-linear-gradient(rgb(153, 15, 200), blue);
+	background: -webkit-linear-gradient(rgb(153, 15, 200), white);
+	background: -o-linear-gradient(rgb(153, 15, 200), white);
+	background: -moz-linear-gradient(rgb(153, 15, 200), white);
 	background: linear-gradient(rgb(153, 15, 200), white);
 	border-top-left-radius: 20px;
 	border-top-right-radius: 20px;
