--- a/styles/style1.css
+++ b/styles/style1.css
@@ -13,6 +13,13 @@ body
 	top: -7px;
 }
 
+#logoholder:hover
+{
+	filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+}
+
 #tagholder
 {
 	width: 875px;
@@ -141,6 +148,7 @@ body
 
 #movedownmain
 {
+	font-family: sans-serif;
 	position: relative;
 	top:20px;
 }
